0022961: Dangerous usage of 'buf' (strncpy doesn't always 0-terminate it) (cppcheck report)